# willt-bots

./: .gitignore  CMakeLists.txt
include/: bot.h  simulation.h  world.h
src/: bot.cpp  main.cpp  simulation.cpp  world.cpp
